# rqt_common_plugins

rqt_bag_annotation/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_bag_annotation/launch/: rqt_bag_annotation.launch
rqt_bag_annotation/resource/: annotation_widget.ui  bag_widget.ui  export_widget.ui
rqt_bag_annotation/rviz/: default_rviz_annotation.rviz
rqt_bag_annotation/scripts/: rqt_bag_annotation
rqt_bag_annotation/src/rqt_bag_annotation/: annotation.py  annotation_widget.py  bag.py  bag_timeline.py  bag_widget.py  export_widget.py  interactive_marker_reward.py  message_loader_thread.py  publisher_tree_model.py  publisher_tree_widget.py  reward_widget.py  tf_restamper.py  timeline_frame.py
